[tool.poetry]
name = "bierbeurzenborrel"
version = "0.1.0"
description = ""
authors = ["Tjibbe <tjibbe.gottmer@science.ru.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22"
matplotlib = "3.7"
pytimedinput = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
